--- a/index.qmd
+++ b/index.qmd
@@ -42,11 +42,12 @@ devtools::load_all()
 #| out-width: '80%'
 #| fig-cap: "Carte des circonscriptions"
 
-# define image path - we're using an image that comes with the package
+# define image path 
 img_path <- c("./outputs/figures/carte_circon.png")
 
 
-knitr::include_graphics(img_path)  # Remplacez par le chemin de votre 
+knitr::include_graphics(img_path) # show the image 
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+
+
